--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "type":"module",
-  "scripts": {"test": "jest"}
+  "scripts": {"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"},
+
+  "jest": {
+    "transform": {}
+  }
+
 }
