--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.21.1",
     "vite": "^5.4.10"
   },
-  "type": "module",
+  "type": "commonjs",  
   "jest": {
     "transform": {}
   }
