--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.21.1",
     "vite": "^5.4.10"
   },
-  "type": "commonjs",
+  "type": "module",
   "jest": {
     "transform": {}
   }
