--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "vite": "^5.4.10"
