--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.21.1",
     "vite": "^5.4.10"
   },
-  "type": "commonjs",
+  "type": "module",
   "jest": {
     "transform": {}
   }
