--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "readline-sync": "^1.4.10",
     "vite": "^5.4.10"
   },
   "keywords": [],
