--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "node": "^23.4.0",
     "vite": "^5.4.10"
   },
   "type": "module",
